<resources>
    <string name="app_name">Farmer App</string>
    <string name="belum_memiliki_akun_register_sekarang">Belum memiliki akun register sekarang</string>
    <string name="login">Login</string>
    <string name="masukan_password">Masukan Password</string>
    <string name="masukan_email">Masukan Email</string>
    <string name="register">Register</string>
    <string name="masukan_nama">Masukan Nama</string>
    <string name="title_activity_prediksi_panen">PrediksiPanenActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add">add</string>
    <string name="nama_lahan_sumber_urip">Nama Lahan</string>
    <string name="jenis_panen_padi">Jenis Panen  </string>
    <string name="luas_lahan">Luas Lahan</string>
    <string name="tanggal_tanam">Tanggal Tanam</string>
    <string name="luas_panen">Luas Panen</string>
    <string name="perkiraan_hasil_panen_padi">Perkiraan Hasil Panen Padi</string>
    <string name="perkiraan_tanggal_panen">Perkiraan Tanggal Panen</string>
    <string name="prediksi_revenue">Prediksi Revenue</string>
    <string name="prediksi_panen">Prediksi Panen</string>
    <string name="list_kepemilikan_lahan">List Kepemilikan Lahan</string>
    <string name="profile">Profile</string>
    <string name="foto_profil">Foto Profil</string>
    <string name="nama">Nama</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="no_handphone">No. Handphone</string>
    <string name="alamat">Alamat</string>
    <string name="nik">NIK</string>
    <string name="nama_label">Nama: %1$s</string>
    <string name="email_label">Email: %1$s</string>
    <string name="nohp_label">No HP: %1$s</string>
    <string name="alamat_label">Alamat: %1$s</string>
    <string name="nik_label">NIK: %1$s</string>
    <string name="periode_tanam">Periode Tanam</string>
    <string name="predicted_output">Predicted Output</string>
    <string name="timestamp">Timestamp</string>
</resources>