<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/et_nama"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:autofillHints="name"
        android:background="@drawable/style_edit_text"
        android:hint="@string/masukan_nama"
        android:inputType="text"
        android:paddingHorizontal="8dp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingHorizontal="8dp"
        android:hint="@string/masukan_email"
        android:background="@drawable/style_edit_text"
        android:inputType="text"
        android:autofillHints="name"
        android:layout_marginTop="10dp"/>



    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingHorizontal="8dp"
        android:hint="@string/masukan_password"
        android:background="@drawable/style_edit_text"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_button_done"
        android:text="@string/register"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:gravity="center"
        android:text="Apabila telah memiliki akun, dapat login disini" />


</LinearLayout>